practice patterns, functional programming

--- a/Topics/Regexes in programs/Theory/task.html
+++ b/Topics/Regexes in programs/Theory/task.html
@@ -37,7 +37,7 @@ false</code></pre>
 <p><strong>The input-output pair 4:</strong></p>
 <pre><code class="language-java">$test_user
 true</code></pre>
-<p>As you can see, by using a simple regular expression we can write a quite powerful program for a real-life problem. If you wish, you can rewrite this regex using other special characters.</p>
+<p>As you can see, by using a simple regular expression we can write a quite powerful program for a real-life problem. If you wish, you can rewrite this regex using other <a class="theory-lookup not-relevant" href="/learn/step/3696" rel="noopener noreferrer nofollow" target="_blank" title="In Java, special characters, also known as meta-characters, are characters that have a specific meaning or function in regular expressions. | They are used to define patterns that can match multiple different strings at once. For example, the dot (.) special character matches any single character, including letters, digits, spaces, and others, but it cannot match the newline character. Another example is the question mark (? ), which is a special character that means the preceding character or nothing. It is often used to match words with slightly different spellings in American and British English.">special characters</a>.</p>
 <h5 id="conclusion" style="text-align: center;">Conclusion</h5>
 <p>In this lesson, we've seen a small example of how regular expressions can help us in string processing. You can experiment further and implement other regular expressions to check whether the login meets stricter requirements.</p>
 </div>
